[package]
name = "cargo-aoc"
version = "0.1.0"
authors = ["traxys <quentin@familleboyer.net>"]
edition = "2021"

[dependencies]
cargo_metadata = "0.18.1"
clap = { version = "4.4.10", features = ["derive", "env"] }
color-eyre = "0.6.2"
itertools = "0.12.0"
reqwest = { version = "0.11.22", features = ["blocking", "rustls-tls"], default-features = false }
